--- a/index.html
+++ b/index.html
@@ -2,41 +2,39 @@
 
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
 		<link rel="stylesheet" href="CSS/normalize.css" media="screen">
+		<link rel="stylesheet" href="CSS/bootstrap.min.css" media="screen">
 		<link href='http://fonts.googleapis.com/css?family=Sintony' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="CSS/style.css" media="screen">
 		<title>CRT - Clincal Research Tools</title>
 	</head>
 
 	<body>
-		<div id="container">
-		
+		<header>
 			<nav>
-			  <ul class="header-menu">
-			    <li><a href="#">Home</a></li>
-			    <li><a href="#">About</a></li>
-			    <li><a href="#">Contact</a></li>
+			  <ul>
+			    <li><a href="#">Sign up</a></li>
+			    <li><a href="#">Login</a></li>
 			  </ul>
 			</nav>
+		</header>
+
+		<div id="container">
 
 			<br></br>
 			
 			<div id="right-content">
 				<h2>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
+					Logo
 				</h2>
 			</div>
 			<div id="center-content">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Clinical Research Management Tools. <br></br>
+					Intuitive. Concise. Comprehensive. <br></br>
+					You'll love them!
 				</p>
-			</div>
-			<div id="left-content">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</div>
 
 		</div>
 	</body>
