--- a/index.html
+++ b/index.html
@@ -5,37 +5,65 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
 		<link rel="stylesheet" href="CSS/normalize.css" media="screen">
 		<link rel="stylesheet" href="CSS/bootstrap.min.css" media="screen">
+		<link rel="stylesheet" href="CSS/bootstrap-theme.min.css" media="screen">
 		<link href='http://fonts.googleapis.com/css?family=Sintony' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="CSS/style.css" media="screen">
 		<title>CRT - Clincal Research Tools</title>
 	</head>
-
+	
+	
 	<body>
-		<header>
-			<nav>
-			  <ul>
-			    <li><a href="#">Sign up</a></li>
-			    <li><a href="#">Login</a></li>
-			  </ul>
-			</nav>
-		</header>
+		<!-- navbar -->
 
-		<div id="container">
-
-			<br></br>
-			
-			<div id="right-content">
-				<h2>
-					Logo
-				</h2>
+		<div class="navbar navbar-default">
+			<div class="container">
+				<a class="navbar-brand text-muted" href="#">CRM Tools</a>
+				<div class="collapse navbar-collapse">
+				  <ul class="nav navbar-nav navbar-right">
+				    <li class="active"><a href="#">Sign up</a></li>
+				    <li><a href="#">Login</a></li>
+				  </ul>
+				</div>
 			</div>
-			<div id="center-content">
-				<p>
-					Clinical Research Management Tools. <br></br>
-					Intuitive. Concise. Comprehensive. <br></br>
+			
+		</div>
+
+		<!-- end navbar -->
+
+		<div class="container">	
+			<div class="jumbotron">	
+				<h2> Clinical Research Management Tools
+				</h2>		
+				<br>
+				<br>
+				<p class="lead">
+					Intuitive. Concise. Comprehensive. <br>
 					You'll love them!
 				</p>
-
+				<p><a class="btn btn-info btn-lg" href="#" role="button">Learn more</a></p>
+			</div>
+			<div class="row">
+				<div class="col-sm-4">
+					<h3>Central documents repository</h3>
+					<p>
+						Share and maintain study documents more efficiently in a version-controlled enviroment where everyone has access to up to date documents at all times
+					</p>
+				</div>
+				<div class="col-sm-4">
+					<h3>Streamlined communication system</h3>
+					<p>
+						Clear communication pathways with full trasparency and well defined distribution lists to ensure right level of involvement from all departments in order to answer study-related questions promtly and effiently
+					</p>
+				</div>
+				<div class="col-sm-4">
+					<h3>Highly customizable alert system</h3>
+					<p>
+						Distribute project related news and udpates to appropiate parties in a controlled and well-organized enviroment
+					</p>
+				</div>
+			</div>
 		</div>
+		<script src="http://code.jquery.com/jquery.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
