--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="CSS/bootstrap-theme.min.css" media="screen">
 		<link href='http://fonts.googleapis.com/css?family=Sintony' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="CSS/style.css" media="screen">
-		<title>CRT - Clincal Research Tools</title>
+		<title>CRMT - Clincal Research Management Tools</title>
 	</head>
 	
 	
@@ -54,6 +54,7 @@
 		<!-- carosel -->
 
 		<!-- end carosel -->
+
 		<div class="container">	
 			<div class="jumbotron">	
 				<h2> Clinical Research Management Tools
@@ -77,7 +78,7 @@
 						<b class="glyphicon glyphicon-envelope"></b>
 					<h3>Streamlined communication</h3>
 					<p>
-						Clear communication pathways with full trasparency and well defined distribution lists to ensure right level of involvement from all departments in order to answer study-related questions promtly and effiently
+						Clear communication pathways with full trasparency and well defined distribution lists to ensure the right level of involvement from all parties in order to answer study-related questions promtly and effiently
 					</p>
 				</div>
 				<div class="col-sm-4">
